# babel

./: .gitignore  Babel  BabelUdp  CMakeLists.txt  Doxyfile  build.sh  clear.sh  conanfile.txt
assets/: qtquickwidget.pro
src/: main.cpp  main_client.cpp  main_server.cpp
src/PortAudio/: PortAudio.cpp  PortAudioRecord.cpp  PortAudioRecord.hpp
src/client/: Clock.hpp  Communication.cpp  Communication.hpp  EncoderSound.cpp  EncoderSound.hpp  LineWidget.hpp  PortAudio.cpp  PortAudio.hpp  PortAudioEcho.cpp  PortAudioEcho.hpp  PortAudioRecord.cpp  PortAudioRecord.hpp  backend.cpp  backend.hpp  main.cpp  main.hpp  main.qml  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  qml.qrc
src/dataBase/: Data.cpp  Data.hpp  data.db  data.db-journal
src/error/: main.cpp
src/server/: Server.cpp  Server.hpp  ServerLogic.cpp  ServerLogic.hpp  Socket.cpp  Socket.hpp  TcpConnection.cpp  TcpConnection.hpp  TcpServer.cpp  TcpServer.hpp  main.cpp  main.hpp  mainwindow.cpp  mainwindow.hpp
src/udpclient/: MyUdp.cpp  MyUdp.hpp  PortAudioRecord.cpp  PortAudioRecord.hpp  Udpclient.cpp  Udpclient.hpp  main.cpp  myudp.cpp  myudp.hpp
src/utils/: Request.cpp  Request.hpp  Utils.cpp  Utils.hpp
